crates/sol-types/tests/ui/empty.stderr
error: unexpected end of input, expected one of: `constructor`, `function`, `fallback`, `receive`, `modifier`, `struct`, `event`, `error`, `abstract`, `contract`, `interface`, `library`, `enum`, `type`, `pragma`, `import`, `using`, parentheses, `tuple`, `function`, `mapping`, identifier
 --> tests/ui/empty.rs:3:1
  |
3 | sol! {}
  | ^^^^^^^
  |
  = note: this error originates in the macro `sol` (in Nightly builds, run with -Z macro-backtrace for more info)

error: unexpected end of input, defining empty structs is disallowed
 --> tests/ui/empty.rs:6:25
  |
6 |     struct EmptyStruct {}
  |                         ^
